# CMakeBuildTemplate

./: CMakeLists.txt  README.md  main.cpp
math/: CMakeLists.txt  MathFunctions.cpp  MathFunctions.h
